* Track contigs and strands that fragmented gene sets belong to

--- a/FragmentFinding.ipynb
+++ b/FragmentFinding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9a71f0140ae407289005ec2c27de5bea6c99aee3c3472d4821287ab9cd1bdc74"
+  "signature": "sha256:adb796bb22670ee0fe683d00945394d8ad1c74119fcdc468ef444e8f08b771cf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,6 +12,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "class Interval(object):\n",
+      "    contig_id = start = end = strand = feature_id = None\n",
+      "    \n",
+      "    def __repr__(self):\n",
+      "        return 'Interval<contig={}, {}, {}, {}, ID={}>'.format(self.contig_id,\n",
+      "                                                               self.start, self.end, self.strand,\n",
+      "                                                               self.feature_id)\n",
+      "\n",
       "def parse_gff_attributes(attr_string):\n",
       "    attributes = dict()\n",
       "    attrs = attr_string.split(';')\n",
@@ -34,15 +42,22 @@
       "        contig_id = fields[0]\n",
       "        start = int(fields[3])\n",
       "        end = int(fields[4])\n",
+      "        strand = fields[6]\n",
       "        attribute_string = fields[8]\n",
       "        attributes = parse_gff_attributes(attribute_string)\n",
       "        assert 'ID' in attributes, \"Invalid GFF3 format, missing ID, on line {}:\\n{}\".format(count, line)\n",
-      "        yield (start, end, attributes['ID'])"
+      "        interval = Interval()\n",
+      "        interval.contig_id = contig_id\n",
+      "        interval.start = start\n",
+      "        interval.end = end\n",
+      "        interval.strand = strand\n",
+      "        interval.feature_id = attributes['ID']\n",
+      "        yield interval"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -54,16 +69,22 @@
       "# use of interval trees taken from this example:\n",
       "# http://informatics.malariagen.net/2011/07/07/using-interval-trees-to-query-genome-annotations-by-position/\n",
       "\n",
+      "gene_trees = dict()\n",
+      "genes = dict()\n",
       "gene_filename = 'scaffold_63_genes.gff3'\n",
       "try:\n",
       "    input_file = open(gene_filename)\n",
       "except IOError as e:\n",
       "    print >>sys.stderr, \"Failed to open file {}: {}\\n\".format(gene_filename, e.strerror)\n",
       "else:\n",
-      "    gene_intervals = IntervalTree()\n",
       "    for interval in parse_gff_interval(input_file):\n",
-      "        gene_intervals.add(interval[0], interval[1], interval[2])\n",
+      "        genes[interval.feature_id] = interval\n",
+      "        contig_tree = gene_trees.setdefault(interval.contig_id, dict())\n",
+      "        strand_tree = contig_tree.setdefault(interval.strand, IntervalTree())\n",
+      "        strand_tree.add(interval.start, interval.end, interval)\n",
+      "        gene_trees[interval.contig_id][interval.strand] = strand_tree\n",
       "\n",
+      "fragment_set = set()\n",
       "protein_filename = 'scaffold_63_proteins.gff3'\n",
       "try:\n",
       "    input_file = open(protein_filename)\n",
@@ -71,9 +92,14 @@
       "    print >>sys.stderr, \"Failed to open file {}: {}\\n\".format(protein_filename, e.strerror)\n",
       "else:\n",
       "    for interval in parse_gff_interval(input_file):\n",
-      "        genes = gene_intervals.find(interval[0], interval[1])\n",
+      "        genes = gene_trees[interval.contig_id][interval.strand].find(interval.start, interval.end)\n",
       "        if len(genes) > 1:\n",
-      "            print genes\n"
+      "            fragment_set.add(tuple([gene.feature_id for gene in genes]))\n",
+      "\n",
+      "count = 0\n",
+      "for fragment_tuple in fragment_set:\n",
+      "    count += len(fragment_tuple)\n",
+      "print count\n"
      ],
      "language": "python",
      "metadata": {},
@@ -82,202 +108,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "['scaffold_63_g236', 'scaffold_63_g237', 'scaffold_63_g238']\n",
-        "['scaffold_63_g70', 'scaffold_63_g71']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g147', 'scaffold_63_g148']\n",
-        "['scaffold_63_g151', 'scaffold_63_g152']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g76', 'scaffold_63_g77', 'scaffold_63_g78', 'scaffold_63_g79', 'scaffold_63_g80', 'scaffold_63_g81', 'scaffold_63_g82', 'scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g137', 'scaffold_63_g138']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g173', 'scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g92', 'scaffold_63_g93']\n",
-        "['scaffold_63_g70', 'scaffold_63_g71']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g105', 'scaffold_63_g106']\n",
-        "['scaffold_63_g101', 'scaffold_63_g102']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g80', 'scaffold_63_g81']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g243', 'scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g243', 'scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g243', 'scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g105', 'scaffold_63_g106']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g105', 'scaffold_63_g106']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g70', 'scaffold_63_g71']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g147', 'scaffold_63_g148']\n",
-        "['scaffold_63_g151', 'scaffold_63_g152']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g151', 'scaffold_63_g152']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g101', 'scaffold_63_g102']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g70', 'scaffold_63_g71']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g75', 'scaffold_63_g76', 'scaffold_63_g77', 'scaffold_63_g78', 'scaffold_63_g79', 'scaffold_63_g80', 'scaffold_63_g81', 'scaffold_63_g82', 'scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g70', 'scaffold_63_g71']\n",
-        "['scaffold_63_g147', 'scaffold_63_g148']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g151', 'scaffold_63_g152']\n",
-        "['scaffold_63_g147', 'scaffold_63_g148']\n",
-        "['scaffold_63_g236', 'scaffold_63_g237', 'scaffold_63_g238']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g105', 'scaffold_63_g106']\n",
-        "['scaffold_63_g105', 'scaffold_63_g106']\n",
-        "['scaffold_63_g105', 'scaffold_63_g106']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g80', 'scaffold_63_g81']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g35', 'scaffold_63_g36', 'scaffold_63_g37', 'scaffold_63_g38']\n",
-        "['scaffold_63_g80', 'scaffold_63_g81']\n",
-        "['scaffold_63_g259', 'scaffold_63_g260']\n",
-        "['scaffold_63_g259', 'scaffold_63_g260']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g151', 'scaffold_63_g152']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g147', 'scaffold_63_g148']\n",
-        "['scaffold_63_g147', 'scaffold_63_g148']\n",
-        "['scaffold_63_g148', 'scaffold_63_g149']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g134', 'scaffold_63_g135', 'scaffold_63_g136']\n",
-        "['scaffold_63_g80', 'scaffold_63_g81']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g217', 'scaffold_63_g218']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g171', 'scaffold_63_g172']\n",
-        "['scaffold_63_g151', 'scaffold_63_g152']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g101', 'scaffold_63_g102']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g70', 'scaffold_63_g71']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g76', 'scaffold_63_g77', 'scaffold_63_g78']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g174', 'scaffold_63_g175', 'scaffold_63_g176']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g153', 'scaffold_63_g154']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g39', 'scaffold_63_g40']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g116', 'scaffold_63_g117']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g244', 'scaffold_63_g245']\n",
-        "['scaffold_63_g96', 'scaffold_63_g97']\n",
-        "['scaffold_63_g101', 'scaffold_63_g102']\n",
-        "['scaffold_63_g80', 'scaffold_63_g81']\n",
-        "['scaffold_63_g80', 'scaffold_63_g81']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g86', 'scaffold_63_g87']\n",
-        "['scaffold_63_g83', 'scaffold_63_g84']\n",
-        "['scaffold_63_g208', 'scaffold_63_g209']\n"
+        "65\n"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
