* Print list of fragment tuples

--- a/FragmentFinding.ipynb
+++ b/FragmentFinding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:adb796bb22670ee0fe683d00945394d8ad1c74119fcdc468ef444e8f08b771cf"
+  "signature": "sha256:430c364afe5908e0d1268970dcf8c215a9acfbcd1d9e152b6dec5316335f15c8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -98,6 +98,7 @@
       "\n",
       "count = 0\n",
       "for fragment_tuple in fragment_set:\n",
+      "    print fragment_tuple\n",
       "    count += len(fragment_tuple)\n",
       "print count\n"
      ],
@@ -108,11 +109,37 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "('scaffold_63_g174', 'scaffold_63_g176')\n",
+        "('scaffold_63_g116', 'scaffold_63_g117')\n",
+        "('scaffold_63_g148', 'scaffold_63_g149')\n",
+        "('scaffold_63_g173', 'scaffold_63_g174', 'scaffold_63_g176')\n",
+        "('scaffold_63_g217', 'scaffold_63_g218')\n",
+        "('scaffold_63_g208', 'scaffold_63_g209')\n",
+        "('scaffold_63_g80', 'scaffold_63_g81')\n",
+        "('scaffold_63_g243', 'scaffold_63_g244', 'scaffold_63_g245')\n",
+        "('scaffold_63_g134', 'scaffold_63_g136')\n",
+        "('scaffold_63_g75', 'scaffold_63_g76', 'scaffold_63_g78', 'scaffold_63_g79', 'scaffold_63_g80', 'scaffold_63_g81', 'scaffold_63_g83', 'scaffold_63_g84')\n",
+        "('scaffold_63_g147', 'scaffold_63_g148')\n",
+        "('scaffold_63_g105', 'scaffold_63_g106')\n",
+        "('scaffold_63_g244', 'scaffold_63_g245')\n",
+        "('scaffold_63_g259', 'scaffold_63_g260')\n",
+        "('scaffold_63_g171', 'scaffold_63_g172')\n",
+        "('scaffold_63_g101', 'scaffold_63_g102')\n",
+        "('scaffold_63_g153', 'scaffold_63_g154')\n",
+        "('scaffold_63_g76', 'scaffold_63_g78')\n",
+        "('scaffold_63_g86', 'scaffold_63_g87')\n",
+        "('scaffold_63_g96', 'scaffold_63_g97')\n",
+        "('scaffold_63_g83', 'scaffold_63_g84')\n",
+        "('scaffold_63_g137', 'scaffold_63_g138')\n",
+        "('scaffold_63_g39', 'scaffold_63_g40')\n",
+        "('scaffold_63_g70', 'scaffold_63_g71')\n",
+        "('scaffold_63_g76', 'scaffold_63_g78', 'scaffold_63_g79', 'scaffold_63_g80', 'scaffold_63_g81', 'scaffold_63_g83', 'scaffold_63_g84')\n",
+        "('scaffold_63_g236', 'scaffold_63_g237')\n",
         "65\n"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
