* Allow GFF3 to be filtered by feature type (gene / transcript) * Create script for running fragment finding

--- a/FragmentFinding.ipynb
+++ b/FragmentFinding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:430c364afe5908e0d1268970dcf8c215a9acfbcd1d9e152b6dec5316335f15c8"
+  "signature": "sha256:f3f18a5ccd3748967b1bf1878370a4807d6f58c116af364be10bd503d8cf73d9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,7 +31,7 @@
       "        attributes[key] = value\n",
       "    return attributes\n",
       "\n",
-      "def parse_gff_interval(infile):\n",
+      "def parse_gff_interval(infile, feature_type=None):\n",
       "    count = 0\n",
       "    for line in infile:\n",
       "        count += 1\n",
@@ -39,6 +39,9 @@
       "            continue\n",
       "        fields = line.split('\\t')\n",
       "        assert len(fields) == 9, \"Invalid GFF3 format at line {}:\\n{}\".format(count, line)\n",
+      "        # filter by feature type\n",
+      "        if feature_type is not None and fields[2] != feature_type:\n",
+      "            continue\n",
       "        contig_id = fields[0]\n",
       "        start = int(fields[3])\n",
       "        end = int(fields[4])\n",
